iac/kubernetes/apisix-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apisix-dashboard
  namespace: apisix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/component: dashboard
    spec:
      containers:
      - name: apisix-dashboard
        image: apache/apisix-dashboard:2.15.0
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: apisix-dashboard
  namespace: apisix
spec:
  selector:
    app.kubernetes.io/component: dashboard
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
