iac/kubernetes/apisix-dashboard-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisix-dashboard
  namespace: apisix
spec:
  selector:
    app.kubernetes.io/component: dashboard
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: apisix-gateway
  namespace: apisix
spec:
  selector:
    app.kubernetes.io/component: gateway
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  type: ClusterIP
